--- a/framework/ohos/src/main/cpp/impl/connector/CMakeLists.txt
+++ b/framework/ohos/src/main/cpp/impl/connector/CMakeLists.txt
@@ -58,6 +58,11 @@ GlobalPackages_Add_dom()
 target_link_libraries(${PROJECT_NAME} PRIVATE dom)
 # endregion
 
+# region wangz
+#GlobalPackages_Add_wangz()
+#target_link_libraries(${PROJECT_NAME} PRIVATE wangz)
+# endregion
+
 # region js_driver
 add_subdirectory(${PROJECT_ROOT_DIR}/driver/js ${CMAKE_CURRENT_BINARY_DIR}/_deps/driver/js)
 target_link_libraries(${PROJECT_NAME} PUBLIC js_driver)
@@ -69,6 +74,16 @@ add_subdirectory(${CPP_ROOT_DIR}/../renderer/native
 target_link_libraries(${PROJECT_NAME} PUBLIC native_renderer)
 # endregion
 
+## region devtools
+#GlobalPackages_Add_devtools_backend()
+#target_link_libraries(${PROJECT_NAME} PUBLIC devtools_backend)
+## endregion
+
+## region devtools_integration
+#add_subdirectory(${PROJECT_ROOT_DIR}/devtools/devtools-integration/native ${CMAKE_CURRENT_BINARY_DIR}/devtools-integration/native)
+#target_link_libraries(${PROJECT_NAME} PUBLIC devtools_integration_native)
+## endregion
+
 # region source set
 set(PUBLIC_SOURCE_SET
   src/dom_manager_napi.cc
@@ -76,6 +91,8 @@ set(PUBLIC_SOURCE_SET
   src/ark2js.cc
   src/js2ark.cc
   src/exception_handler.cc
-  src/native_renderer_napi.cc)
+  src/native_renderer_napi.cc
+  #src/wangz.cc
+  )
 target_sources(${PROJECT_NAME} PUBLIC ${PUBLIC_SOURCE_SET})
 # endregion
