--- a/devtools/devtools-integration/CMakeLists.txt
+++ b/devtools/devtools-integration/CMakeLists.txt
@@ -23,6 +23,7 @@ cmake_minimum_required(VERSION 3.14)
 project("devtools_integration")
 
 set(CMAKE_CXX_STANDARD 17)
+#set(OHOS "OHOS")
 
 if (VOLTRON)
     add_subdirectory(${PROJECT_ROOT_DIR}/devtools/devtools-integration/voltron)
@@ -30,4 +31,6 @@ elseif (ANDROID)
     add_subdirectory(${PROJECT_ROOT_DIR}/devtools/devtools-integration/android/src/main/cpp)
 elseif (IOS)
     add_subdirectory(${PROJECT_ROOT_DIR}/devtools/devtools-integration/ios)
+elseif (OHOS)
+    add_subdirectory(${PROJECT_ROOT_DIR}/devtools/devtools-integration/ohos)
 endif()
