update for debug

--- a/framework/ohos/src/main/cpp/impl/connector/CMakeLists.txt
+++ b/framework/ohos/src/main/cpp/impl/connector/CMakeLists.txt
@@ -71,10 +71,10 @@ target_link_libraries(${PROJECT_NAME} PUBLIC native_renderer)
 
 
 
-GlobalPackages_Add_devtools_backend()
-target_link_libraries(${PROJECT_NAME} PUBLIC devtools_backend)
-GlobalPackages_Add_devtools_integration()
-target_link_libraries(${PROJECT_NAME} PUBLIC devtools_integration)
+#GlobalPackages_Add_devtools_backend()
+#target_link_libraries(${PROJECT_NAME} PUBLIC devtools_backend)
+#GlobalPackages_Add_devtools_integration()
+#target_link_libraries(${PROJECT_NAME} PUBLIC devtools_integration)
 
 ## region devtools_integration
 #add_subdirectory(${PROJECT_ROOT_DIR}/devtools/devtools-integration/native ${CMAKE_CURRENT_BINARY_DIR}/devtools-integration/native)
@@ -92,7 +92,7 @@ set(PUBLIC_SOURCE_SET
   src/js2ark.cc
   src/exception_handler.cc
   src/native_renderer_napi.cc
-  src/wangz.cc
+#  src/wangz.cc
   )
 target_sources(${PROJECT_NAME} PUBLIC ${PUBLIC_SOURCE_SET})
 message(STATUS "wangz::js_driver_napi--${ENABLE_INSPECTOR}")
