feat(ohos): modify devtools code

--- a/devtools/devtools-integration/CMakeLists.txt
+++ b/devtools/devtools-integration/CMakeLists.txt
@@ -24,12 +24,13 @@ project("devtools_integration")
 
 set(CMAKE_CXX_STANDARD 17)
 
-#if (VOLTRON)
-#    add_subdirectory(${PROJECT_ROOT_DIR}/devtools/devtools-integration/voltron)
-#elseif (ANDROID)
-#    add_subdirectory(${PROJECT_ROOT_DIR}/devtools/devtools-integration/android/src/main/cpp)
-#elseif (IOS)
-#    add_subdirectory(${PROJECT_ROOT_DIR}/devtools/devtools-integration/ios)
-#endif()
+if (VOLTRON)
+    add_subdirectory(${PROJECT_ROOT_DIR}/devtools/devtools-integration/voltron)
+elseif (ANDROID)
+    add_subdirectory(${PROJECT_ROOT_DIR}/devtools/devtools-integration/android/src/main/cpp)
+elseif (IOS)
+    add_subdirectory(${PROJECT_ROOT_DIR}/devtools/devtools-integration/ios)
+elseif (OHOS)
+    add_subdirectory(${PROJECT_ROOT_DIR}/devtools/devtools-integration/ohos)
+endif()
 
-add_subdirectory(${PROJECT_ROOT_DIR}/devtools/devtools-integration/ohos)
